Fix styling defaulted to extra bold, making shit unreadable

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -42,6 +42,7 @@ h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  text-align: justify;
   text-justify: auto;
   -webkit-hyphens: none;
       -ms-hyphens: none;
